[project]
name = "pii-detection"
version = "1.0.0"
description = "Context-Aware AI-Driven Scalable PII Detection Framework using Dual-Head BERT"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "faker>=19.0.0",
]

[project.optional-dependencies]
training = [
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
